fix layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,6 +72,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    overflow-y: scroll;
   }
 
   ::-webkit-scrollbar {
